samples/_failures_safe/1761633324_4c043b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_891a8f17.c: In function ‘main’:
./samples/SAFE/__tmp_891a8f17.c:158:13: error: expected ‘;’ at end of input
  158 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_891a8f17.c:158:9: error: expected declaration or statement at end of input
  158 |         free
      |         ^~~~
./samples/SAFE/__tmp_891a8f17.c:158:9: error: expected declaration or statement at end of input
